feat : 채팅 이미지 URL 설정